# aigora

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  commitlint.config.cjs  package-lock.json  package.json  pyproject.toml
.github/: pull_request_template.md  (+1 more)
src/curriculum_graph/: __init__.py  pyproject.toml
src/curriculum_graph/application/: __init__.py  queries.py  repository.py  validators.py
src/curriculum_graph/domain/: __init__.py  enums.py  models.py
src/curriculum_graph/infrastructure/: __init__.py
src/curriculum_graph/infrastructure/loaders/: __init__.py  yaml_loader.py
src/curriculum_graph/infrastructure/repositories/: __init__.py  file_repository.py
src/curriculum_graph/tests/fixtures/graph/: metadata.yaml
src/curriculum_graph/tests/fixtures/graph/profiles/: profile.fuvest.yaml
src/curriculum_graph/tests/integration/: test_file_repository.py
src/curriculum_graph/tests/unit/: test_models.py  test_queries.py  test_semantic_operational_validators.py  test_validators.py  test_yaml_loader.py
tools/changelog_generator/: .env.example  .gitignore  CHANGELOG-WORKFLOWS.md  README.md  agent.py  changelog_consolidator.py  changelog_writer.py  cli.py  demo_ai.py  demo_dryrun.py  generate.py  models.py  parser.py  pyproject.toml  release_detector.py  task_collector.py
tools/changelog_generator/changelog_generator/: __init__.py  agent.py
tools/changelog_generator/src/: agent.py  parser.py
tools/changelog_generator/tests/: __init__.py  conftest.py  test_agent.py  test_models.py  test_parser.py  test_task_collector.py
(+336 files in other folders)
