[project]
name = "aigora-curriculum-graph"
version = "0.1.0"
description = "AIGORA Curriculum Graph — file-based loader, validation engine, query layer, and repository pattern."
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/curriculum_graph"]

[tool.pytest.ini_options]
testpaths = ["src/curriculum_graph/tests"]
pythonpath = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[dependency-groups]
dev = [
    "pytest-json-report>=1.5.0",
    "pytest-report>=0.2.1",
]
